# simple-redis-manager

./: LICENSE  Project Structure.txt  README.md  config.ini.example  pyproject.toml
src/: redis_manager.py
